Created Emploee model, created EmploeeController, EmploeeValidator, created also Emploee Migration, and the first insertion in the database has already been done, saving an Emploee, created database config

--- a/.env
+++ b/.env
@@ -6,5 +6,8 @@ PORT = 3333
 DATABASE_URL = postgres://postgres:admin@localhost:5432/dbcar
 DATABASE_USER = postgres
 DATABASE_PASSWORD = admin
-DATABASE_NAME    = cars
+DATABASE_NAME    = dbcar
 DATABASE_PORT = 5432
+DATABASE_HOST = localhost
+
+DATABASE_DIALECT= postgres
