--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,6 +2,6 @@ const path = require('path');
 
 module.exports = {
   'config': path.resolve(__dirname, 'src', 'database', 'config.js'),
-  'models-path': path.resolve(__dirname, 'src', 'database', 'models'),
+  'models-path': path.resolve(__dirname, 'src', 'models'),
   'migrations-path': path.resolve(__dirname, 'src','database', 'migrations')
 };
