--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.4",
     "@types/sequelize": "^4.28.11",
     "@types/validator": "^13.7.1",
@@ -24,6 +25,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "pg": "^8.7.1",
     "sequelize": "^7.0.0-alpha.2",
     "sequelize-cli": "^6.3.0",
